fixed recipe home page alignment

--- a/styles/recipe.css
+++ b/styles/recipe.css
@@ -60,7 +60,7 @@ h2{
   width: 30%;
 }
 .secondColumn {
-  float: right;
+  float: left;
   padding: 0 10px 0 0;
   width: 55%;
 }
@@ -103,10 +103,13 @@ li{
     list-style: none;
     text-align: left;
     margin-bottom: 5px;
+    word-wrap: break-word;
   }
   ol li{
     margin-bottom: 15px;
     word-wrap: break-word;
+    text-align: left;
+    padding-left: 5px;
   }
 
 /* to create break in list */
